--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-slate
+title: CAF Intro
+show_downloads: false
+description:  Einführung in das Microsoft Cloud Adoption Framework
