--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 title: CAF Einführung
+logo: /media/caf.jpg
 show_downloads: false
 description:  Einführung in das Microsoft Cloud Adoption Framework
